password index.html

--- a/index.html
+++ b/index.html
@@ -411,13 +411,13 @@ function initAuth() {
     // Crea un utente admin predefinito se non esistono utenti
     users = [
       {
-        username: 'admin',
-        password: 'admin123', // In produzione usare una password più sicura
+        username: 'Pietrolki',
+        password: 'admin1212', // In produzione usare una password più sicura
         role: 'admin'
       },
       {
-        username: 'user',
-        password: 'user123',
+        username: 'IRFR',
+        password: 'formula1',
         role: 'user'
       }
     ];
