--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
   </div>
 
   <!-- Script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chart.js/3.7.0/chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/char.js@3.7.0/dist/chart.min.js"></script>
   <script>
     // Configurazione
     const API_URL = '/.netlify/functions/api';
