--- a/index.html
+++ b/index.html
@@ -818,8 +818,9 @@ async function fetchLogs() {
   try {
     statusIndicator.className = 'inline-block w-3 h-3 bg-yellow-400 rounded-full';
     connectionStatus.textContent = 'Recupero dati...';
-    
-    const response = await fetch(`${API_URL}?since=${lastLogId}`);
+   const url = lastLogId ? `${API_URL}?since=${lastLogId}` : `${API_URL}`;
+const response = await fetch(url);
+
     if (!response.ok) throw new Error('Errore di rete');
     
     const newLogs = await response.json();
