--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -31,6 +32,10 @@
       background-color: #1f2937;
       color: #f9fafb;
     }
+    .dark-mode .bg-white {
+  background-color: #2d3748; /* Grigio scuro invece di bianco */
+}
+
     .dark-mode .bg-white {
       background-color: #374151;
     }
