--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       background-color: #4b5563;
     }
   
-#vehicle-type-chart { max-height: 250px; }
+#hourly-distribution-chart { max-height: 250px !important; }
 </style>
 </head>
 <body class="bg-gray-100 min-h-screen">
@@ -127,6 +127,12 @@
           Gestisci Utenti
         </button>
 </div>
+
+<div>
+<label class="block text-sm font-medium text-gray-700 mb-1">Nuovo Limite Velocità (km/h)</label>
+<input class="w-full px-3 py-2 border rounded-md" id="global-speed-limit" max="150" min="20" placeholder="Es. 80" type="number"/>
+<button class="mt-2 bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded-md w-full" id="save-global-limit">Salva Nuovo Limite</button>
+</div>
 </div>
 <div class="border-t pt-4">
 <button class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md" id="execute-admin-action">
@@ -151,31 +157,10 @@
 <!-- Gli utenti verranno inseriti qui -->
 </div>
 </div>
-<div class="border-t pt-4">
-<h4 class="font-medium text-gray-700 mb-2">Aggiungi Nuovo Utente</h4>
-<div class="grid grid-cols-1 gap-4 md:grid-cols-2">
-<div>
-<label class="block text-sm font-medium text-gray-700 mb-1" for="new-username">Username</label>
-<input class="w-full px-3 py-2 border rounded-md" id="new-username" type="text"/>
-</div>
-<div>
-<label class="block text-sm font-medium text-gray-700 mb-1" for="new-password">Password</label>
-<input class="w-full px-3 py-2 border rounded-md" id="new-password" type="password"/>
-</div>
-<div>
-<label class="block text-sm font-medium text-gray-700 mb-1" for="new-role">Ruolo</label>
-<select class="w-full px-3 py-2 border rounded-md" id="new-role">
-<option value="user">Utente Base</option>
-<option value="admin">Amministratore</option>
-</select>
-</div>
-</div>
-</div>
+
 </div>
 <div class="flex justify-between pt-4">
-<button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-md" id="add-user">
-        Aggiungi Utente
-      </button>
+
 <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md" id="save-users">
         Salva Modifiche
       </button>
@@ -231,6 +216,11 @@
 <p class="text-yellow-500 font-medium">Rilevazioni Oggi</p>
 <p class="text-2xl font-bold" id="detections-today">0</p>
 <p class="text-sm text-gray-500">Superamenti delle ultime 24h</p>
+</div>
+
+<div>
+<label class="block text-sm font-medium text-gray-700 mb-1" for="zone-filter">Zona</label>
+<input class="w-full px-3 py-2 border rounded-md" id="zone-filter" placeholder="Inserisci zona..." type="text"/>
 </div>
 </div>
 </div>
@@ -1749,5 +1739,5 @@ Data e ora: ${new Date(log.timestamp).toLocaleString()}`);
       updateChart();
     });
   </script>
-<section class="mt-6"><h2 class="text-2xl font-semibold mb-4">Statistiche Avanzate</h2><div class="bg-white rounded-lg shadow-md p-6 mb-6" id="advanced-stats"></div></section></body>
+</body>
 </html>
