--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 }
     .dark-mode {
       background-color: #1f2937;
-      color: #f9fafb;
+      color: #2F4F4F;
     }
     .dark-mode .bg-white {
   background-color: #2d3748; /* Grigio scuro invece di bianco */
