--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 <button class="bg-blue-500 text-white rounded-full p-2" id="settings-button">
 <i class="fas fa-cog"></i>
 </button>
+<button class="bg-blue-500 text-white rounded-full p-2" id="settings-button">
+<i class="fas fa-tire" id="gomma"></i>
+</button>
 </div>
 </div>
 <p class="text-gray-600">Monitoraggio in tempo reale dei veicoli che superano i limiti di velocità</p>
