--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 <div class="bg-white rounded-lg shadow-lg p-6 max-w-md w-full">
 <div class="flex justify-between items-center mb-4">
 <h3 class="text-xl font-semibold text-gray-800">Pannello Amministratore</h3>
-<button class="text-gray-500 hover:text-gray-700" id="close-admin-modal">
-<i class="fas fa-times"></i>
-</button>
+<a href="monitorgomme.html" id="settings-button" class="bg-blue-500 text-white rounded-full p-2 inline-block">
+  <i class="fas fa-tire" id="gomma"></i>
+</a>
 </div>
 <div class="space-y-4 mb-6">
 <div>
