--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Sistema di Rilevazione Velocità Roblox</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css
 <link href="favicon.png" rel="icon" type="image/x-icon"/>
 <style>
     .log-entry {
