--- a/index.html
+++ b/index.html
@@ -107,9 +107,6 @@
 <div class="bg-white rounded-lg shadow-lg p-6 max-w-md w-full">
 <div class="flex justify-between items-center mb-4">
 <h3 class="text-xl font-semibold text-gray-800">Pannello Amministratore</h3>
-<a href="monitorgomme.html" id="settings-button" class="bg-blue-500 text-white rounded-full p-2 inline-block">
-  <i class="fas fa-tire" id="gomma"></i>
-</a>
 </div>
 <div class="space-y-4 mb-6">
 <div>
@@ -188,6 +185,9 @@
 </div>
 </div>
 <p class="text-gray-600">Monitoraggio in tempo reale dei veicoli che superano i limiti di velocità</p>
+<a href="monitorgomme.html"  class="bg-blue-500 text-white rounded-full p-2 inline-block">
+  <i class="fas fa-tire" id="gomma"></i>
+</a>
 </header>
 <!-- Pannello di controllo -->
 <div class="bg-white rounded-lg shadow-md p-6 mb-6">
