--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
 <div class="bg-white rounded-lg shadow-lg p-6 max-w-xl w-full">
 <div class="flex justify-between items-center mb-4">
 <h3 class="text-xl font-semibold text-gray-800">Gestione Utenti</h3>
+    <button class="text-gray-500 hover:text-gray-700" id="close-users-modal">
+<i class="fas fa-times"></i>
+</button>
 </div>
+
 <div class="space-y-4 mb-6">
 <div>
 <h4 class="font-medium text-gray-700 mb-2">Utenti Registrati</h4>
@@ -175,9 +179,6 @@
 </button>
 <button class="bg-blue-500 text-white rounded-full p-2" id="settings-button">
 <i class="fas fa-cog"></i>
-</button>
-<button class="bg-blue-500 text-white rounded-full p-2" id="settings-button">
-<i class="fas fa-tire" id="gomma"></i>
 </button>
 </div>
 </div>
