--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 <div class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50" id="admin-actions-modal">
 <div class="bg-white rounded-lg shadow-lg p-6 max-w-md w-full">
 <div class="flex justify-between items-center mb-4">
+<button class="text-gray-500 hover:text-gray-700" id="close-admin-modal">
+<i class="fas fa-times"></i>
+</button>
 <h3 class="text-xl font-semibold text-gray-800">Pannello Amministratore</h3>
 </div>
 <div class="space-y-4 mb-6">
