--- a/monitorgomme.html
+++ b/monitorgomme.html
@@ -870,3 +870,8 @@
                 });
                 pagination.appendChild(nextButton);
             }
+            }
+        }
+    </script>
+</body>
+</html>
