--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ window.addEventListener('load', () => {
 
     statusIndicator.className = 'inline-block w-3 h-3 bg-green-400 rounded-full';
     connectionStatus.textContent = 'Connesso';
-  } catch (error) {
+    catch (error) {
     console.error('Errore nel recupero dei log:', error);
     statusIndicator.className = 'inline-block w-3 h-3 bg-red-500 rounded-full';
     connectionStatus.textContent = 'Errore di connessione';
