--- a/index.html
+++ b/index.html
@@ -821,10 +821,10 @@ window.addEventListener('load', () => {
 });
 
 // Modificare la funzione fetchLogs
-
+    try {
     statusIndicator.className = 'inline-block w-3 h-3 bg-green-400 rounded-full';
     connectionStatus.textContent = 'Connesso';
-    catch (error) {
+    } catch (error) {
     console.error('Errore nel recupero dei log:', error);
     statusIndicator.className = 'inline-block w-3 h-3 bg-red-500 rounded-full';
     connectionStatus.textContent = 'Errore di connessione';
