--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 <script>
 // Configurazione
-const API_URL = '/.netlify/functions/api';
+const API_URL = 'https://irfradmin.netlify.app/.netlify/functions/api';
 let POLL_INTERVAL = 3000; // Predefinito: 3 secondi
 // Aggiungi queste variabili all'inizio dello script
 let currentUser = null;
