--- a/index.html
+++ b/index.html
@@ -1505,6 +1505,7 @@ function showSpeedLimitModal() {
     
     // Renderizza i log nella tabella
     function renderLogs() {
+  console.log('Rendering logs:', logs);
       if (filteredLogs.length === 0) {
         logsContainer.innerHTML = '<div class="text-center text-gray-500 py-12">Nessun risultato trovato</div>';
       } else {
