--- a/index.html
+++ b/index.html
@@ -403,12 +403,12 @@ function initAuth() {
     users = [
       {
         username: 'Pietrolki',
-        password: 'admin1212', // In produzione usare una password più sicura
+        password: 'adminIRFR12', 
         role: 'admin'
       },
       {
         username: 'IRFR',
-        password: 'formula1',
+        password: 'Accessoairfr',
         role: 'user'
       }
     ];
