--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ function initAuth() {
       },
       {
         username: 'IRFR',
-        password: 'Accessoairfr',
+        password: 'FormIrfr',
         role: 'user'
       }
     ];
