--- a/monitorgomme.html
+++ b/monitorgomme.html
@@ -594,7 +594,7 @@ async function loadRealData() {
                             type: 'time',
                             time: {
                                 unit: 'day',
-                                tooltipFormat: 'DD MMM YYYY HH:mm'
+                                tooltipFormat: 'dd MMM yyyy HH:mm'
                             },
                             title: {
                                 display: true,
